# QT_Air-Strike_Game

./: Bullet.cpp  Bullet.h  CMakeLists.txt  Enemy.cpp  Enemy.h  Game.cpp  Game.h  Health.cpp  Player.cpp  Player.h  README.md  Score.cpp  Score.h  main.cpp  resources.qrc
Bullet/: Bullet.h
Enemy/: Enemy.cpp  Enemy.h
Health/: Health.h
Player/: Player.cpp  Player.h
